[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/items/bomb.png" type="Texture" id=1]
[ext_resource path="res://elements/items/Bomb.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fuse"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Bomb" type="Node2D"]
script = ExtResource( 2 )
frame = 2

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.5, 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -9, -22 )
vframes = 4
hframes = 3

[node name="Bomb animation" type="AnimationPlayer" parent="."]
autoplay = "fuse"
playback_speed = 2.0
anims/fuse = SubResource( 1 )

[node name="Graphic blink" type="Timer" parent="."]
wait_time = 0.5

[node name="Blink timer" type="Timer" parent="."]
one_shot = true

[node name="Blow timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Graphic blink" to="." method="_on_Graphic_blink_timeout"]
[connection signal="timeout" from="Blink timer" to="." method="_on_Blink_timer_timeout"]
[connection signal="timeout" from="Blow timer" to="." method="_on_Blow_timer_timeout"]
